--- a/index.html
+++ b/index.html
@@ -5,6 +5,87 @@
     <title>Tea Cozy One</title>
   </head>
   <body>
-    <p>hello world</p>
+     <!--Header-->
+    <div class="header">
+      <ul>
+        <li><a href="#">Mission</a></li>
+        <li><a href="#">Featured Tea</a></li>
+        <li><a href="#">Locations</a></li>
+      </ul>
+    </div>
+    <div class="content">
+      <div class="mission">
+        <h2>
+          Our Mission
+        </h2>
+        <h4>
+          Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
+        </h4>
+      </div>
+      <div class="tea">
+        <h2>
+          Tea of the Month
+        </h2>
+        <h4>
+          What's Steeping at The Tea Cozy?
+        </h4>
+        <h4>
+          Fall Berry Blitz Tea
+        </h4>
+        <h4>
+          Spiced Rum Tea
+        </h4>
+        <h4>
+          Seasonal Donuts
+        </h4>
+        <h4>
+          Myrtle Ave Tea
+        </h4>
+        <h4>
+          Bedford Bizarre Tea
+        </h4>
+      </div>
+      <div class="location">
+        <h2>
+          Locations
+        </h2>
+        <h3>
+          Downtown
+        </h3>
+        <p>
+          384 West 4th St Suite 108 Portland, Maine
+        </p>
+        <h3>
+          East Bayside
+        </h3>
+        <p>
+          3433 Phisherman's Avenue(Northwest Corner) Portland, Maine
+        </p>
+        <h3>
+          Oakdale
+        </h3>
+        <p>
+          515 Crescent Avenue Second FloorPortland, Maine
+        </p>
+
+      </div>
+      <div class="contact">
+        <h2>
+          The Tea Cozy
+        </h2>
+        <h5>
+          contact@theteacozy.com
+        </h5>
+        <h5>
+          917-555-8904
+        </h5>
+      </div>
+    </div>
+    <!--footer-->
+    <div class="footer">
+      <h5>
+        copyright The Tea Cozy 2017
+      </h5>
+    </div>
   </body>
 </html>
