added all text and format without positioning

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <link href=".\resources\css\style.css" type="text/css" rel="stylesheet">
     <title>Tea Cozy One</title>
   </head>
   <body>
      <!--Header-->
     <div class="header">
+      <img src="./resources/images/img-tea-cozy-logo.png" alt="tea cozy logo">
       <ul>
         <li><a href="#">Mission</a></li>
         <li><a href="#">Featured Tea</a></li>
@@ -29,18 +30,23 @@
         <h4>
           What's Steeping at The Tea Cozy?
         </h4>
+        <img src="./resources/images/img-berryblitz.jpg" alt="picture">
         <h4>
           Fall Berry Blitz Tea
         </h4>
+        <img src="./resources/images/img-spiced-rum.jpg" alt="picture">
         <h4>
           Spiced Rum Tea
         </h4>
+        <img src="./resources/images/img-donut.jpg" alt="picture">
         <h4>
           Seasonal Donuts
         </h4>
+        <img src="./resources/images/img-myrtle-ave.jpg" alt="picture">
         <h4>
           Myrtle Ave Tea
         </h4>
+        <img src="./resources/images/img-bedford-bizarre.jpg" alt="picture">
         <h4>
           Bedford Bizarre Tea
         </h4>
@@ -67,7 +73,6 @@
         <p>
           515 Crescent Avenue Second FloorPortland, Maine
         </p>
-
       </div>
       <div class="contact">
         <h2>
