--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     </div>
     <div class="content">
       <div class="mission">
-        <h2>
-          Our Mission
-        </h2>
-        <h4>
-          Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
-        </h4>
+        <div class="missiontext">
+          <h2>
+            Our Mission
+          </h2>
+          <h4>
+            Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
+          </h4>
+        </div>
       </div>
       <div class="tea">
         <h2>
@@ -30,49 +32,85 @@
         <h4>
           What's Steeping at The Tea Cozy?
         </h4>
-        <img src="./resources/images/img-berryblitz.jpg" alt="picture">
-        <h4>
-          Fall Berry Blitz Tea
-        </h4>
-        <img src="./resources/images/img-spiced-rum.jpg" alt="picture">
-        <h4>
-          Spiced Rum Tea
-        </h4>
-        <img src="./resources/images/img-donut.jpg" alt="picture">
-        <h4>
-          Seasonal Donuts
-        </h4>
-        <img src="./resources/images/img-myrtle-ave.jpg" alt="picture">
-        <h4>
-          Myrtle Ave Tea
-        </h4>
-        <img src="./resources/images/img-bedford-bizarre.jpg" alt="picture">
-        <h4>
-          Bedford Bizarre Tea
-        </h4>
+        <div class="teatop">
+          <div class="teatop1">
+            <img src="./resources/images/img-berryblitz.jpg" alt="picture">
+            <h4>
+              Fall Berry Blitz Tea
+            </h4>
+          </div>
+          <div class="teatop2">
+            <img src="./resources/images/img-spiced-rum.jpg" alt="picture">
+            <h4>
+              Spiced Rum Tea
+            </h4>
+          </div>
+          <div class="teatop3">
+            <img src="./resources/images/img-donut.jpg" alt="picture">
+            <h4>
+              Seasonal Donuts
+            </h4>
+          </div>
+        </div>
+        <div class="teabottom">
+          <div class="teabottom1">
+            <img src="./resources/images/img-myrtle-ave.jpg" alt="picture">
+            <h4>
+              Myrtle Ave Tea
+            </h4>
+          </div>
+          <div class="teabottom2">
+            <img src="./resources/images/img-bedford-bizarre.jpg" alt="picture">
+            <h4>
+              Bedford Bizarre Tea
+            </h4>
+          </div>
+        </div>
       </div>
       <div class="location">
-        <h2>
-          Locations
-        </h2>
-        <h3>
-          Downtown
-        </h3>
-        <p>
-          384 West 4th St Suite 108 Portland, Maine
-        </p>
-        <h3>
-          East Bayside
-        </h3>
-        <p>
-          3433 Phisherman's Avenue(Northwest Corner) Portland, Maine
-        </p>
-        <h3>
-          Oakdale
-        </h3>
-        <p>
-          515 Crescent Avenue Second FloorPortland, Maine
-        </p>
+        <div class="locationtext">
+          <h2>
+            Locations
+          </h2>
+        </div>
+        <!--location-->
+        <div class="locationbox">
+          <div class="location1">
+            <h3>
+              Downtown
+            </h3>
+            <h4>384 West 4th St</h4>
+            <h4>Suite 108</h4>
+            <h4>Portland, Maine</h4>
+            </p>
+          </div>
+          <div class="location2">
+            <h3>
+              East Bayside
+            </h3>
+            <h4>
+              3433 Phisherman's Avenue
+            </h4>
+            <h4>
+              (Northwest Corner)
+            </h4>
+            <h4>
+              Portland, Maine
+            </h4>
+          </div>
+          <div class="location3">
+            <h3>
+              Oakdale
+            </h3>
+            <h4>
+              515 Crescent Avenue
+            </h4>
+            <h4>
+              Second Floor
+            </h4>
+            <h4>Portland, Maine</h4>
+          </div>
+        </div>
       </div>
       <div class="contact">
         <h2>
